--- a/.travis.yml
+++ b/.travis.yml
@@ -1,7 +1,11 @@
 language: c++
-compiler: 
-    - clang
-    - gcc
+compiler: gcc
 
 script:
-  - make test
+  - make coverage
+
+after_success:
+  - codecov --env TRAVIS_OS_NAME
+
+install:
+  - pip insall codecov
